# xarm_ws

./: README.md
.cache/clangd/index/: mtc_node.cpp.26CC8ACCE35BCCD2.idx
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mtc/lib/mtc/: mtc_node  mtc_pick_place
install/mtc/share/mtc/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mtc/share/mtc/cmake/: mtcConfig-version.cmake  mtcConfig.cmake
install/mtc/share/mtc/environment/: ament_prefix_path.dsv  path.dsv
install/mtc/share/mtc/launch/: pick_place_demo.launch.py
install/xarm_1s_bringup/share/xarm_1s_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/xarm_1s_bringup/share/xarm_1s_bringup/cmake/: xarm_1s_bringupConfig-version.cmake  xarm_1s_bringupConfig.cmake
install/xarm_1s_bringup/share/xarm_1s_bringup/environment/: ament_prefix_path.dsv  path.dsv
install/xarm_1s_bringup/share/xarm_1s_bringup/launch/: demo.launch.py  pick_place_demo.launch.py
install/xarm_1s_description/share/xarm_1s_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/xarm_1s_description/share/xarm_1s_description/cmake/: xarm_1s_descriptionConfig-version.cmake  xarm_1s_descriptionConfig.cmake
install/xarm_1s_description/share/xarm_1s_description/config/: initial_positions.yaml
install/xarm_1s_description/share/xarm_1s_description/environment/: ament_prefix_path.dsv  path.dsv
install/xarm_1s_description/share/xarm_1s_description/meshes/: base.stl  base_collision.stl  link0.stl  link0_collision.stl  link0_left.stl  link0_left_collision.stl  link1.stl  link1_collision.stl  link1_left.stl  link1_left_collision.stl  link2.stl  link2_collision.stl  link3.stl  link3_collision.stl  link4.stl  link4_collision.stl  link5.stl  link5_collision.stl  link6.stl  link6_collision.stl
install/xarm_1s_description/share/xarm_1s_description/rviz/: xarm_1s.rviz
install/xarm_1s_description/share/xarm_1s_description/urdf/: xarm_1s.urdf.xacro
install/xarm_1s_hardware/include/xarm_1s_hardware/: xarm_1s_hardware_interface.hpp
install/xarm_1s_hardware/share/xarm_1s_hardware/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  xarm_1s_hardware_plugin.xml
install/xarm_1s_hardware/share/xarm_1s_hardware/cmake/: ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_xarm_1s_hardwareExport-noconfig.cmake  export_xarm_1s_hardwareExport.cmake  xarm_1s_hardwareConfig-version.cmake  xarm_1s_hardwareConfig.cmake
install/xarm_1s_hardware/share/xarm_1s_hardware/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv
install/xarm_1s_moveit_config/share/xarm_1s_moveit_config/: .setup_assistant  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/xarm_1s_moveit_config/share/xarm_1s_moveit_config/cmake/: xarm_1s_moveit_configConfig-version.cmake  xarm_1s_moveit_configConfig.cmake
install/xarm_1s_moveit_config/share/xarm_1s_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  pilz_industrial_motion_planner_planning.yaml  ros2_controllers.yaml  sensors_3d.yaml  stomp_planning.yaml  xarm_1s.srdf
install/xarm_1s_moveit_config/share/xarm_1s_moveit_config/environment/: ament_prefix_path.dsv  path.dsv
log/: latest_build
src/mtc/: CMakeLists.txt  package.xml
src/mtc/launch/: pick_place_demo.launch.py
src/mtc/src/: mtc_node.cpp
src/xarm_1s_bringup/: CMakeLists.txt
src/xarm_1s_bringup/launch/: demo.launch.py  pick_place_demo.launch.py
src/xarm_1s_description/: CMakeLists.txt
src/xarm_1s_description/urdf/control/: xarm_1s.ros2_control.xacro
src/xarm_1s_hardware/: CMakeLists.txt  package.xml  xarm_1s_hardware_plugin.xml
src/xarm_1s_hardware/include/xarm_1s_hardware/: xarm_1s_hardware_interface.hpp
src/xarm_1s_hardware/src/: xarm_1s_hardware_interface.cpp
src/xarm_1s_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/xarm_1s_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  pilz_industrial_motion_planner_planning.yaml  ros2_controllers.yaml  stomp_planning.yaml  xarm_1s.srdf
src/xarm_1s_moveit_config/launch/: demo.launch.py
src/xarm_1s_moveit_config/rviz/: moveit.rviz
src/xarm_1s_moveit_config/src/: demo.launch.py
(+14 files in other folders)
