<?xml version="1.0"?>
<package format="3">
  <name>xarm_1s_hardware</name>
  <version>0.0.1</version>
  <description>ros2_control hardware interface for Hiwonder xArm 1S (HID)</description>
  <maintainer email="hyeonsu@todo.todo">hyeonsu</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <export>
    <build_type>ament_cmake</build_type>
    <hardware_interface plugin="${prefix}/xarm_1s_hardware_plugin.xml"/>
  </export>
</package>
