<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xarm_1s_moveit_config</name>
  <version>0.0.0</version>
  <description>MoveIt configuration, launch files, and SRDF files for myCobot robots</description>
  <maintainer email="jhs04140@naver.com">ubuntu</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>rviz2</depend>
  <depend>rviz_visual_tools</depend>

  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>pilz_industrial_motion_planner</exec_depend>

  <!-- 주의: launch/demo.launch.py 는 xarm_1s_bringup 의 launch 를 include 하지만,
       bringup 이 이 패키지에 역으로 의존하므로 cycle 방지를 위해 exec_depend 는 선언하지 않는다.
       워크스페이스 전체를 함께 빌드하면 정상 동작. -->


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>